--- a/details.html
+++ b/details.html
@@ -30,7 +30,7 @@
         </nav>
 
         <main class="container content">
-            <div class="breadcrumb-nav"><a href=${detailsUrl}>Back to characters</a></div>
+            <div class="breadcrumb-nav"><a href="index.html">Back to characters</a></div>
 
             <div class="detail-container">
                 <img class="details-image" src="https://via.placeholder.com/250" alt="Character Name" />
