--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link active" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -33,36 +33,32 @@
 
     <main class="container content">
 
-        <h1>Rick and Morty Characters</h1>
+        <h1>The History of Rick and Morty</h1>
 
-        <div class="row results">
+        <div class="about">
 
-            <!-- <div class="loader"></div> -->
-
-            <div class="col-sm-6 col-md-4 col-lg-3">
-                <div class="card">
-
-                    <img class="image" src="https://via.placeholder.com/300" alt="Character Name">
-                    <div class="details">
-                        <h4 class="name">Character Name</h4>
-                        <p>Type: Type value here</p>
-                        <p>Episode count: Episode count here</p>
-                        <a class="btn btn-primary" href="details.html?id">Details</a>
-                    </div>
-
-                </div>
-            </div>
-
+            <blockquote>
+                <p>
+                    Rick and Morty is an American adult animated science fiction sitcom created by Justin Roiland and Dan Harmon for Cartoon Network's late-night programming block Adult Swim. The series follows the misadventures of cynical mad scientist Rick Sanchez and his good-hearted but fretful grandson Morty Smith, who split their time between domestic life and interdimensional adventures.
+                </p>
+                <p>
+                    Roiland voices the eponymous characters, with Chris Parnell, Spencer Grammer and Sarah Chalke voicing the rest of the family. The series originated from an animated short parody film of Back to the Future, created by Roiland for Channel 101, a short film festival co-founded by Harmon. The series has been acclaimed by critics for its originality, creativity and humor.
+                </p>
+                <p>
+                    <cite>
+                        <a href="https://en.wikipedia.org/wiki/Rick_and_Morty" target="_blank">Wikipedia</a>
+                    </cite>
+                </p>
+            </blockquote>
 
         </div>
-
     </main>
 
     <footer>JavaScript 1 Course Assignment</footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/about.js"></script>
 </body>
 
 </html>
