--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>JavaScript 1</title>
+    <title>Contact | JavaScript 1</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -25,33 +25,45 @@
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link active" href="contact.html">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
 
     <main class="container content">
-        <div class="breadcrumb-nav"><a href="index.html">Back to characters</a></div>
-
-        <div class="detail-container">
-            <img class="details-image" src="https://via.placeholder.com/250" alt="Character Name" />
-            <div class="detail-details">
-                <h1>Character Name</h1>
-                <p>Status: <span class="value" id="status">Status goes here</span></p>
-                <p>Species: <span class="value" id="species">Species goes here</span></p>
-                <p>Origin: <span class="value" id="origin">Origin name goes here</span></p>
-                <p>Location: <span class="value" id="location">Location name goes here</span></p>
+        <h1>Contact</h1>
+        <form id="contactForm">
+            <div class="form-group">
+                <input class="form-control" name="firstName" id="firstName" placeholder="First name">
+                <div class="form-error" id="firstNameError">Please enter your first name</div>
             </div>
-        </div>
 
+            <div class="form-group">
+                <input class="form-control" name="lastName" id="lastName" placeholder="Last name">
+                <div class="form-error" id="lastNameError">Please enter your last name</div>
+            </div>
+
+            <div class="form-group">
+                <input class="form-control" name="email" id="email" placeholder="Email">
+                <div class="form-error" id="emailError">Please enter your email address</div>
+                <div class="form-error" id="invalidEmailError">Please enter a valid email address</div>
+            </div>
+
+            <div class="form-group">
+                <textarea class="form-control" name="message" id="message" placeholder="Message (at least 10 characters)"></textarea>
+                <div class="form-error" id="messageError">The message must be at least 10 characters.</div>
+            </div>
+
+            <button type="submit" class="btn btn-primary" id="submit">Submit</button>
+        </form>
     </main>
 
     <footer>JavaScript 1 Course Assignment</footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script src="js/details.js"></script>
+    <script src="js/contact.js"></script>
 </body>
 
 </html>
